@@ -1,4 +1,5 @@
 [connector]
+differed = False
 
 [view]
 autorefreshview = False
