@@ -6,6 +6,7 @@ On the road for v0.4.8 (Nausicaa2)
 ===============================================================================
 
 2006-12-12  Gilles Dumortier <dgil at ieee.org>
+	* wxPython 2.8 : non-regression testing (SF bug 1614304)
 	* Money Management : HTML generated page use iso-8859-1 charset
 	* News : Boursorama News provider was buggy (SF bug 1612349)
 	* News : saving the cache with non ASCII char (SF bug 1613121) / UTF8
